--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,15 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              {"glob": "**/*",
+              "input": "src/app/assets",
+              "output": "/assets/"
+            }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -92,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
